# deepstream-sample-apps

./: README.md
deepstream-6.0/: docker_python_setup.sh  download_folder_gitignore.sh
deepstream-6.0.1/: download_folder_gitignore.sh
deepstream-6.1/: download_folder_gitignore.sh  version
deepstream-6.1.1/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  version
deepstream-6.1.1/sources/gst-plugins/gst-nvdsaudiotemplate/: gstnvdsaudiotemplate.cpp
deepstream-6.1.1/sources/gst-plugins/gst-nvdspreprocess/: gstnvdspreprocess.h  nvdspreprocess_property_parser.cpp
deepstream-6.1.1/sources/gst-plugins/gst-nvdsvideotemplate/: gstnvdsvideotemplate.cpp
deepstream-6.1.1/sources/gst-plugins/gst-nvinfer/: gstnvinfer.cpp
deepstream-6.1.1/sources/includes/: nvds_version.h
deepstream-6.1.1/sources/libs/nvdsinfer/: nvdsinfer_context_impl.cpp  nvdsinfer_context_impl.h
deepstream-6.2/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  install.sh  uninstall.sh  user_deepstream_python_apps_install.sh  version
deepstream-6.2/sources/gst-plugins/gst-dsexample/: gstdsexample.cpp  gstdsexample_optimized.cpp
deepstream-6.3/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  install.sh  uninstall.sh  user_additional_install.sh  user_deepstream_python_apps_install.sh  version
deepstream-6.4/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  install.sh  uninstall.sh  user_additional_install.sh  user_deepstream_python_apps_install.sh  version
deepstream-6.4/sources/TritonBackendEnsemble/: README  config_infer_primary.txt  config_infer_secondary_ensemble.txt
deepstream-6.4/sources/TritonOnnxYolo/: README
deepstream-6.4/sources/includes/: gst-nvdscommonconfig.h  nvds_obj_encode.h  nvds_opticalflow_meta.h  nvds_tracker_meta.h  nvds_version.h  nvds_yml_parser.h  nvdsinfer_context.h  nvdsmeta.h  nvdsmeta_schema.h  nvdstracker.h  nvll_osd_struct.h
deepstream-7.0/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  install.sh  rtpjitterbuffer_eos_handling.patch  uninstall.sh  update_rtpmanager.sh  user_deepstream_python_apps_install.sh  version
deepstream-7.0/service-maker/cmake/: nvds_service_makerConfig.cmake
deepstream-7.0/service-maker/includes/: buffer.hpp  common_factory.hpp  data_feeder.hpp  element.hpp  metadata.hpp  object.hpp  pad.hpp  pipeline.hpp  signal_emitter.hpp  signal_handler.hpp  source_config.hpp
deepstream-7.0/service-maker/sources/apps/deepstream_test5_app/: CMakeLists.txt  README  deepstream_test5.cpp  test5_b16_dynamic_source.yaml  test5_b2.yaml
deepstream-7.0/service-maker/sources/modules/measure_fps_probe/: CMakeLists.txt  measure_fps_probe.hpp
deepstream-7.0/sources/SONYCAudioClassifier/: ds_audio_sonyc_test_config.txt
deepstream-7.0/sources/TritonBackendEnsemble/: README  config_infer_primary.txt  config_infer_secondary_ensemble.txt
deepstream-7.0/sources/TritonOnnxYolo/: README  config_triton_inferserver_primary_yolov3_onnx_custom.txt
deepstream-7.0/sources/includes/: INvDsAllocator.h  gst-nvdscustomevent.h  gst-nvdscustommessage.h  gst-nvdssr.h  gst-nvevent.h  gst-nvmessage.h  gst-nvquery-internal.h  gst-nvquery.h  gst_nvdsaudio.h  gstnvdsinfer.h  gstnvvideotestsrc.h  nvds_analytics_meta.h  nvds_appctx_server.h  nvds_audio_meta.h  nvds_dewarper_meta.h  nvds_logger.h  nvds_mask_utils.h  nvds_msgapi.h  nvds_obj_encode.h  nvds_opticalflow_meta.h  nvds_tracker_meta.h  nvds_version.h  nvdsdummyusermeta.h  nvdsinfer_tlt.h  nvdsinferserver_config.proto  nvdsmeta.h  nvdsnmos.h  nvdstracker.h  nvll_osd_struct.h  nvmsgbroker.h
deepstream-7.0/sources/objectDetector_Yolo/: README  config_infer_primary_yoloV2.txt  config_infer_primary_yoloV2_tiny.txt  config_infer_primary_yoloV3.txt  config_infer_primary_yoloV3_tiny.txt  deepstream_app_config_yoloV2.txt  deepstream_app_config_yoloV2_tiny.txt  deepstream_app_config_yoloV3.txt  deepstream_app_config_yoloV3_tiny.txt  prebuild.sh
deepstream-7.0/sources/tracker_ReID/: README  calibrate.py  convert.py
deepstream-7.1/: LICENSE.txt  README  README.rhel  download_folder_gitignore.sh  install.sh  uninstall.sh  update_rtpmanager.sh  user_additional_install.sh  user_deepstream_python_apps_install.sh  version
deepstream-7.1/service-maker/includes/: buffer.hpp  buffer_probe.hpp  custom_factory.hpp  custom_object.hpp  data_feeder.hpp  data_receiver.hpp  ds_yaml_parser.hpp  element.hpp  factory_metadata.h  mediainfo.hpp  metadata.hpp  object.hpp  pipeline.hpp  plugin.h  source_config.hpp  tensor.hpp  tiler_event_handler.hpp
deepstream-7.1/service-maker/python/: pyservicemaker-0.0.1-py3-none-linux_x86_64.whl
deepstream-7.1/service-maker/sources/apps/cpp/deepstream_test4_app/: CMakeLists.txt  README  deepstream_test4.cpp  dstest4_config.yaml
deepstream-7.1/service-maker/sources/modules/ensemble_render/: CMakeLists.txt  ensemble_render.cpp  ensemble_render.hpp
deepstream-7.1/service-maker/sources/modules/lidar_feeder/: CMakeLists.txt  lidar_feeder.cpp  lidar_feeder.hpp
deepstream-7.1/service-maker/sources/modules/resnet_tensor_parser/: CMakeLists.txt  resnet_tensor_parser.cpp  resnet_tensor_parser.hpp
deepstream-7.1/sources/SONYCAudioClassifier/: config_infer_audio_sonyc.txt
deepstream-7.1/sources/TritonBackendEnsemble/: README  config_infer_primary.txt  deepstream_app_config_triton_backend_ensemble.txt
deepstream-7.1/sources/TritonOnnxYolo/: README  deepstream_app_triton_config_yolov3.txt
deepstream-7.1/sources/includes/: NvDsMemoryAllocator.h  gst-nvdscustommessage.h  gst-nvmultiurisrcbincreator.h  gstnvdsinfer.h  gstnvdsmeta.h  gstnvdsseimeta.h  nvbufaudio.h  nvbufsurface.h  nvds_latency_meta.h  nvds_latency_meta_internal.h  nvds_roi_meta.h  nvds_utils.h  nvds_version.h  nvds_yml_parser.h  nvdscustomusermeta.h  nvdsgstutils.h  nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h  nvdsinfer_dbscan.h  nvdsinfer_utils.h  nvdsinferserver_plugin.proto  nvdsmeta.h  nvdsmeta_schema.h  nvdspreprocess_interface.h  nvdstracker.h  nvll_osd_api.h  nvmsgbroker.h  nvmsgbroker_internal.h
deepstream-7.1/sources/tracker_ReID/: README
(+1675 files in other folders)
